--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,74 @@
-p {
-	font-family: "Bauhaus 93", "sans-serif";
-}
 img {
+	max-height: 250px;
 	width: 20%;
-	height: auto;
+	object-fit: cover;
+	border-radius: 30%;
+	float: left;
+	border:4px solid #AD4D00; /*red-orange color*/
+	margin: 20px;
+}
+
+/*body styles*/
+body {
+	font-family: 'Athiti', sans-serif;
+	line-height: 1.6;
+	background-color: #eef6f6;
+}
+
+p {
+	font-family: 'Athiti', sans-serif;
+	text-align: justify;
+	padding: 50px 30px 50px 80px;
+}
+
+/* =================================
+  Base Layout Styles
+==================================== */
+/*Navigation*/
+
+.name {
+	margin: 0;
+	text-align: center;
+}
+
+/* ---- Layout Containers ---- */
+
+.container {
+	width: 90%;
+	margin: 0 auto;
+}
+
+.text-area {
+	clear: left;
+	padding: 20px;
+	height: 30%;
+}
+
+ul {
+	list-style-type: circle;
+	padding: 10px;
+	margin: 10px;
+}
+
+div {
+	clear: both;
+	padding: 10px;
+	height: 20%;
+}
+
+.main-header {
+	background: #3acec2;
+	padding: 1em 0;
+}
+
+.main-footer {
+	clear: both;
+	padding: 10px;
+	background: #d9e4ea;
+	text-align: center;
+}
+
+/* ---- Page Elements ---- */
+br {
+	margin: 10%;
 }
