--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*Global Page Styles*/
 
-h2 {
+h2 h3 {
 	text-align: center;
 }
 
@@ -66,7 +66,10 @@ img {
 	padding: 20px;
 	height: 30%;
 }
-
+form{
+	display: inline-block;
+	text-align: center;
+}
 /*Footer Style*/
 
 .main-footer {
