--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 /*Global Page Styles*/
 
-h2 h3 {
+h2, h3 {
 	text-align: center;
 }
 
 body {
 	font-family: 'Athiti', sans-serif;
+	font-size: 20px;
 	line-height: 1.6;
 	background-color: #eef6f6;
 }
@@ -50,7 +51,7 @@ img {
 	object-fit: cover;
 	border-radius: 30%;
 	float: left;
-	border:4px solid #AD4D00; /*red-orange color*/
+	border:4px solid #808080;
 	margin: 20px;
 }
 
@@ -67,8 +68,10 @@ img {
 	height: 30%;
 }
 form{
-	display: inline-block;
-	text-align: center;
+	margin-left: 45%;
+	margin-right: 45%;
+	width: 100%;
+}
 }
 /*Footer Style*/
 
